[package]
name = "increstore"
version = "0.1.0"
authors = ["Jihyun Yu <yjh0502@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.7"
bytesize = "1.1.0"
env_logger = "0.9.0"
futures = { version = "0.3.21", features = ["thread-pool"] }
highway = "0.8"
log = "0.4.14"
pbr = "1.0.4"
rayon = "1.5.1"
rusqlite = { version = "0.28", features = ["time"] }
sha1 = "0.10.1"
stopwatch = "0.0.7"
tar = "0.4.38"
tempfile = "3.3.0"
time = "0.3.7"
xdelta3 = { git = "https://github.com/yjh0502/xdelta3-rs" }
zip = "0.6"
walkdir = "2.3.2"
memmap = "0.7.0"
flate2 = "1.0.22"
failure = "0.1.8"
tokio = { version = "1.17.0", features = ["full"] }
tokio-util = { version = "0.7.0", features = ["compat"] }

[profile.release]
debug = true
