[package]
name = "increstore"
version = "0.1.0"
authors = ["Jihyun Yu <yjh0502@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.9"
bytesize = "1.1.0"
env_logger = "0.11.0"
futures = { version = "0.3.25", features = ["thread-pool"] }
highway = "1.0.0"
log = "0.4.17"
pbr = "1.0.4"
rayon = "1.6.0"
rusqlite = { version = "0.31.0", features = ["time"] }
sha1 = "0.10.5"
stopwatch = "0.0.7"
tar = "0.4.38"
tempfile = "3.3.0"
time = "0.3.17"
xdelta3 = { git = "https://github.com/yjh0502/xdelta3-rs" }
zip = "1"
walkdir = "2.3.2"
memmap = "0.7.0"
flate2 = "1.0.25"
failure = "0.1.8"
tokio = { version = "1.22.0", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["compat"] }
zstd = "0.13.0"
xz2 = "0.1.7"

[profile.release]
debug = true
