[package]
name = "increstore"
version = "0.1.0"
authors = ["Jihyun Yu <yjh0502@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.13"
bytesize = "2"
env_logger = "0.11.8"
futures = { version = "0.3.31", features = ["thread-pool"] }
highway = "1.3.0"
log = "0.4.27"
pbr = "1.1.1"
rayon = "1.10.0"
rusqlite = { version = "0.35.0", features = ["time"] }
sha1 = "0.10.6"
stopwatch = "0.0.7"
tar = "0.4.44"
tempfile = "3.20.0"
time = "0.3.41"
xdelta3 = { git = "https://github.com/yjh0502/xdelta3-rs" }
zip = "2.6.1"
walkdir = "2.5.0"
memmap = "0.7.0"
flate2 = "1.1.1"
failure = "0.1.8"
tokio = { version = "1.45.0", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["compat"] }

[profile.release]
debug = true
